# wideopencl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/kernel/: square.cl
examples/src/: square.cpp
include/wideopencl/: Array.h  Buffer.h  CommandQueue.h  Context.h  Kernel.h  Program.h  Vector.h  device_t.h  error.h  platform_t.h
src/: Buffer.cpp  CommandQueue.cpp  Context.cpp  Kernel.cpp  Program.cpp  device_t.cpp  error.cpp  platform_t.cpp
